; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_text-lookup.c_text_lookup_create.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_text-lookup.c_text_lookup_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.text_lookup = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.text_lookup* @text_lookup_create(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.text_lookup*, align 8
  store i8* %0, i8** %2, align 8
  %4 = call %struct.text_lookup* @bzalloc(i32 4)
  store %struct.text_lookup* %4, %struct.text_lookup** %3, align 8
  %5 = load %struct.text_lookup*, %struct.text_lookup** %3, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = call i32 @text_lookup_add(%struct.text_lookup* %5, i8* %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %1
  %10 = load %struct.text_lookup*, %struct.text_lookup** %3, align 8
  %11 = call i32 @bfree(%struct.text_lookup* %10)
  store %struct.text_lookup* null, %struct.text_lookup** %3, align 8
  br label %12

12:                                               ; preds = %9, %1
  %13 = load %struct.text_lookup*, %struct.text_lookup** %3, align 8
  ret %struct.text_lookup* %13
}

declare dso_local %struct.text_lookup* @bzalloc(i32) #1

declare dso_local i32 @text_lookup_add(%struct.text_lookup*, i8*) #1

declare dso_local i32 @bfree(%struct.text_lookup*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
